@@ -612,6 +612,7 @@
 	- added device_slot to image_entry and set it in read_softlist_entry()
 	- added missing xmlCleanupParser() call in cleanup_and_exit()
 	- updated WARNINGS in makefile and added clang-specific ones
+	- removed unnecessary global variable listxml_output
 	
 	create_report
 	- pass the file descriptor as parameter to PRINT_INFO
